adding content to about page
adding a brief on the projects i have made

--- a/about.html
+++ b/about.html
@@ -67,11 +67,49 @@
       </nav>
       <br /><br />
       <div class="wrapper2">
-        <h1 class="about">About</h1>
-        <p>
-          Im a foriegnlanguages and transltion graduate ,German major and
-          spanish as minor,i entered this field in July,2021 , i found it so
-        </p>
+       <h1 class="text-center">About me</h1>
+    <h3 class="text-center">🇪🇬 Front-end developer from Giza, Egypt</h3>
+    <div class="about-paragraphs">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure qui quod
+        dolores cumque, veniam alias voluptatibus at nobis corporis velit vero
+        voluptatum nisi! Esse consectetur dolor est accusantium veniam! Nobis?
+      </p>
+    </div>
+    <div class="container">
+      <div class="row d-flex">
+        <div class="col-sm-4">
+          <img
+            src="media/weatherAPP.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Weather APP Image"
+          />
+        </div>
+        <div class="col-sm-4">
+          <img
+            src="media/gilban1.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="furniture Project Image"
+          />
+        </div>
+        <div class="col-sm-4">
+          <img
+            src="images/app2.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yogurt Project Image"
+          />
+        </div>
+      </div>
+    </div>
+    <div id="contact" class="mt-5">
+      <h2 class="text-center">📮 Contact me</h2>
+      <a href="mailto:yasmine.moh@hotmail.com" class="email-link">
+        yasmine.moh@hotmail.com
+      </a>
+    </div>
+  </body>
+</html>
+
       </div>
     </div>
   </body>
