--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Cookie&family=Major+Mono+Display&family=PT+Mono&family=Poppins:ital,wght@0,200;0,300;1,200&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/6bb1917f97.js" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -76,9 +77,20 @@
         voluptatum nisi! Esse consectetur dolor est accusantium veniam! Nobis?
       </p>
     </div>
-    
+    <h3>
+ Tools
+    </h3>
+    <div class="icons">
+    <i class="fab fa-html5"></i>
+    <i class="fab fa-css3"></i>
+    <i class="fab fa-js-square"></i>
+    <i class="fab fa-font-awesome-flag"></i>
+    <i class="fab fa-bootstrap"></i>
+    <i class="fab fa-react"></i>
+    </div>
       </div>
     </div>
+    <br/><br/><br/><br/><br/>
     <div class="container">
   <footer class="d-flex flex-wrap justify-content-between align-items-center py-2 my-3 border-top">
     <div class="col-md-4 d-flex align-items-center">
