--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       rel="stylesheet"
     />
     <script
+      src="https://kit.fontawesome.com/6bb1917f97.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
@@ -87,7 +91,17 @@
       <img src="media/responsive1.svg" width="350px" height="250px" />
       <img src="media/responsive2.svg" width="350px" height="250px" />
     </div>
+    <br />
+    <br />
 
+    <div class="tools-used">
+      <i class="fab fa-html5"></i>
+      <i class="fab fa-css3"></i>
+      <i class="fab fa-js-square"></i>
+      <i class="fab fa-font-awesome-flag"></i>
+      <i class="fab fa-bootstrap"></i>
+      <i class="fab fa-react"></i>
+    </div>
     <br /><br /><br /><br /><br />
     <div class="container">
       <footer
