adding a paragraph about myself

--- a/about.html
+++ b/about.html
@@ -72,22 +72,12 @@
     <h3 class="text-center">🇪🇬 Front-end developer from Giza, Egypt</h3>
     <div class="about-paragraphs">
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure qui quod
-        dolores cumque, veniam alias voluptatibus at nobis corporis velit vero
-        voluptatum nisi! Esse consectetur dolor est accusantium veniam! Nobis?
+        Hi, I'm Yasmine from Giza,Egypt baseed in Cracow,Poland.Graduated from forigen languages and translation as German major, but i discovered my real passion as in web development in 2021, i worked in many projects ,there is so much to learn and so knowledge to gain 
       </p>
+      <p>For now im Front end Devopler working with HTML ,CSS ,Java script and React framework </p>
     </div>
-    <h3>
- Tools
-    </h3>
-    <div class="icons">
-    <i class="fab fa-html5"></i>
-    <i class="fab fa-css3"></i>
-    <i class="fab fa-js-square"></i>
-    <i class="fab fa-font-awesome-flag"></i>
-    <i class="fab fa-bootstrap"></i>
-    <i class="fab fa-react"></i>
-    </div>
+  
+   
       </div>
     </div>
     <br/><br/><br/><br/><br/>
