shortining the homepage as it was

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cookie&family=Major+Mono+Display&family=PT+Mono&family=Poppins:ital,wght@0,200;0,300;1,200&family=Source+Code+Pro:wght@300&family=Space+Mono&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -81,28 +84,7 @@
         <h3>Hello I'm,</h3>
         <h1>Yasmine Mohamed</h1>
         <h3>Front End Devopler - based in Poland</h3>
-        <br />
-
-        <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-      </div>
-      <br /><br /><br /><br />
-    </div>
-    <div class="hero">
-      <img src="media/responsive1.svg" width="350px" height="250px" />
-      <img src="media/responsive2.svg" width="350px" height="250px" />
-    </div>
-    <br />
-    <br />
-
-    <div class="tools-used">
-      <i class="fab fa-html5"></i>
-      <i class="fab fa-css3"></i>
-      <i class="fab fa-js-square"></i>
-      <i class="fab fa-font-awesome-flag"></i>
-      <i class="fab fa-bootstrap"></i>
-      <i class="fab fa-react"></i>
-    </div>
-    <br /><br /><br /><br /><br />
+       <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="container">
       <footer
         class="
